--- a/src/template.html
+++ b/src/template.html
@@ -11,7 +11,7 @@
 
     <meta content="TypeScript developer, wild cat" property="og:description">
     <meta content="Snazzah" property="og:title">
-    <meta content="https://snazzah.com/i/avy/current.min.png" property="og:image">
+    <meta content="https://snazzah.com/avatar.min.png" property="og:image">
     <meta content="image/png" property="og:image:type">
     <meta content="150" property="og:image:width">
     <meta content="150" property="og:image:height">
@@ -22,7 +22,7 @@
     <meta name="twitter:url" content="https://snazzah.com">
     <meta name="twitter:title" content="Snazzah">
     <meta name="twitter:description" content="TypeScript developer, wild cat">
-    <meta name="twitter:image" content="https://snazzah.com/i/avy/current.min.png">
+    <meta name="twitter:image" content="https://snazzah.com/avatar.min.png">
     <meta name="twitter:image:type" content="image/png">
     <meta name="twitter:image:width" content="150">
     <meta name="twitter:image:height" content="150">
@@ -38,13 +38,13 @@
     <meta name="revised" content="Monday, Feburary 22th, 2021, 10:00 am">
     <meta name="rating" content="General">
 
-    <link rel="fluid-icon" type="image/png" href="https://snazzah.com/i/avy/current.min.png">
+    <link rel="fluid-icon" type="image/png" href="https://snazzah.com/avatar.min.png">
     <link rel="canonical" href="https://snazzah.com/index.html">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/i/m/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/i/m/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/i/m/favicon-16x16.png">
-    <link rel="mask-icon" href="/i/m/safari-pinned-tab.svg" color="#fc2929">
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/meta/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/meta/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/meta/favicon-16x16.png">
+    <link rel="mask-icon" href="/images/meta/safari-pinned-tab.svg" color="#fc2929">
     <meta name="msapplication-TileColor" content="#fc2929">
     <meta name="theme-color" content="#fc2929">
 
