Fix meta avatar

--- a/src/template.html
+++ b/src/template.html
@@ -11,7 +11,7 @@
 
     <meta content="TypeScript developer, wild cat" property="og:description">
     <meta content="Snazzah" property="og:title">
-    <meta content="https://snazzah.com/avatar.min.png" property="og:image">
+    <meta content="https://snazzah.com/images/avatar.min.png" property="og:image">
     <meta content="image/png" property="og:image:type">
     <meta content="150" property="og:image:width">
     <meta content="150" property="og:image:height">
@@ -22,7 +22,7 @@
     <meta name="twitter:url" content="https://snazzah.com">
     <meta name="twitter:title" content="Snazzah">
     <meta name="twitter:description" content="TypeScript developer, wild cat">
-    <meta name="twitter:image" content="https://snazzah.com/avatar.min.png">
+    <meta name="twitter:image" content="https://snazzah.com/images/avatar.min.png">
     <meta name="twitter:image:type" content="image/png">
     <meta name="twitter:image:width" content="150">
     <meta name="twitter:image:height" content="150">
@@ -38,7 +38,7 @@
     <meta name="revised" content="Monday, Feburary 22th, 2021, 10:00 am">
     <meta name="rating" content="General">
 
-    <link rel="fluid-icon" type="image/png" href="https://snazzah.com/avatar.min.png">
+    <link rel="fluid-icon" type="image/png" href="https://snazzah.com/images/avatar.min.png">
     <link rel="canonical" href="https://snazzah.com/index.html">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/images/meta/apple-touch-icon.png">
